--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.560.0",
-    "recharts": "https://esm.sh/recharts@^3.5.1"
+    "recharts": "https://esm.sh/recharts@^3.5.1",
+    "jspdf": "https://esm.sh/jspdf@2.5.1",
+    "jspdf-autotable": "https://esm.sh/jspdf-autotable@3.8.2"
   }
 }
 </script>
