feat: Add payslip generation and PDF export capabilities
Introduces the ability to manually add payslips and enhances existing functionality for generating and exporting payslips in PDF format. Updates dependencies to include `html2canvas` and `pdfjs-dist` for PDF rendering and manipulation.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -44,7 +45,10 @@
     "recharts": "https://esm.sh/recharts@^3.5.1",
     "jspdf": "https://esm.sh/jspdf@2.5.1",
     "jspdf-autotable": "https://esm.sh/jspdf-autotable@3.8.2",
-    "jszip": "https://esm.sh/jszip@3.10.1"
+    "html2canvas": "https://esm.sh/html2canvas@1.4.1",
+    "jszip": "https://esm.sh/jszip@3.10.1",
+    "pdfjs-dist": "https://esm.sh/pdfjs-dist@3.11.174",
+    "pdfjs-dist/": "https://esm.sh/pdfjs-dist@3.11.174/"
   }
 }
 </script>
