feat: Integrate Azure AD for Microsoft login
Adds support for logging in via Microsoft Azure Active Directory using MSAL.

This change introduces the `@azure/msal-browser` package and updates the `Login` component to include a Microsoft login button. The `AppContext` is modified to handle the new `loginWithMicrosoft` authentication flow. Azure AD configuration details are provided in `authConfig.ts`.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     "vite": "https://esm.sh/vite@^7.3.0",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "jspdf-autotable": "https://esm.sh/jspdf-autotable@^5.0.2"
+    "jspdf-autotable": "https://esm.sh/jspdf-autotable@^5.0.2",
+    "@azure/msal-browser": "https://esm.sh/@azure/msal-browser@3.10.0"
   }
 }
 </script>
