--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EMP HR Portal</title>
+    <title>EmpowerCorp HR Portal</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -50,7 +49,8 @@
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "jspdf-autotable": "https://esm.sh/jspdf-autotable@^5.0.2",
-    "@azure/msal-browser": "https://esm.sh/@azure/msal-browser@3.10.0"
+    "@azure/msal-browser": "https://esm.sh/@azure/msal-browser@3.10.0",
+    "xlsx": "https://esm.sh/xlsx@^0.18.5"
   }
 }
 </script>
