--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EmpowerCorp HR Portal</title>
     <script>
-      // Early polyfill for process.env to prevent ReferenceErrors during module loading
+      // Early polyfill for process.env
       window.process = { env: { NODE_ENV: 'development' } };
     </script>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -25,6 +24,7 @@
       }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    
     <style>
       body {
         font-family: 'Inter', sans-serif;
@@ -56,6 +56,34 @@
       .dark .custom-scrollbar::-webkit-scrollbar-thumb:hover {
         background: #475569;
       }
+
+      /* ArcGIS UI Overrides */
+      .esri-ui-corner .esri-component {
+        box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1) !important;
+        border-radius: 8px !important;
+        overflow: hidden;
+      }
+      .esri-popup__main-container {
+        border-radius: 16px !important;
+        overflow: hidden !important;
+        box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25) !important;
+      }
+      .esri-popup__header {
+        display: none !important;
+      }
+      .esri-popup__content {
+        margin: 0 !important;
+        padding: 0 !important;
+      }
+      .esri-view-surface:focus::after {
+        outline: none !important;
+      }
+      .dark .esri-view-surface {
+        background-color: #0f172a !important;
+      }
+      .esri-popup__pointer-direction-up {
+        background-color: #0d9488 !important;
+      }
     </style>
   <script type="importmap">
 {
@@ -74,7 +102,8 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "jspdf-autotable": "https://esm.sh/jspdf-autotable@^5.0.2",
     "@azure/msal-browser": "https://esm.sh/@azure/msal-browser@3.10.0",
-    "xlsx": "https://esm.sh/xlsx@^0.18.5"
+    "xlsx": "https://esm.sh/xlsx@^0.18.5",
+    "esri-loader": "https://esm.sh/esri-loader@^3.7.0"
   }
 }
 </script>
