feat: Enhance HR Assistant and PWA capabilities
Introduce PWA installation support with a sidebar button and update the AI assistant's system instructions to improve its hybrid capabilities. The AI can now act as both an HR specialist and a general-purpose AI, better leveraging its context and broader knowledge base. Also, update suggested prompts to reflect these new capabilities.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#0f766e" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="https://ui-avatars.com/api/?name=EC&background=0f766e&color=fff&size=192&rounded=true">
     <title>EmpowerCorp HR Portal</title>
     <script>
       // Early polyfill for process.env
