--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
           extend: {
             colors: {
               primary: {
-                50: '#f5f3ff',
-                100: '#ede9fe',
-                200: '#ddd6fe',
-                300: '#c4b5fd',
-                400: '#a78bfa',
-                500: '#8b5cf6',
-                600: '#7c3aed',
-                700: '#6d28d9',
-                800: '#5b21b6',
-                900: '#4c1d95',
-                950: '#2e1065',
+                50: 'rgb(var(--primary-50) / <alpha-value>)',
+                100: 'rgb(var(--primary-100) / <alpha-value>)',
+                200: 'rgb(var(--primary-200) / <alpha-value>)',
+                300: 'rgb(var(--primary-300) / <alpha-value>)',
+                400: 'rgb(var(--primary-400) / <alpha-value>)',
+                500: 'rgb(var(--primary-500) / <alpha-value>)',
+                600: 'rgb(var(--primary-600) / <alpha-value>)',
+                700: 'rgb(var(--primary-700) / <alpha-value>)',
+                800: 'rgb(var(--primary-800) / <alpha-value>)',
+                900: 'rgb(var(--primary-900) / <alpha-value>)',
+                950: 'rgb(var(--primary-950) / <alpha-value>)',
               },
               slate: {
                 850: '#1e293b', 
@@ -50,6 +50,21 @@
     <link rel="stylesheet" href="https://js.arcgis.com/4.30/esri/themes/light/main.css">
     
     <style>
+      :root {
+        /* Default Violet/Purple Brand Colors (RGB values for Tailwind opacity support) */
+        --primary-50: 245 243 255;
+        --primary-100: 237 233 254;
+        --primary-200: 221 214 254;
+        --primary-300: 196 181 253;
+        --primary-400: 167 139 250;
+        --primary-500: 139 92 246;
+        --primary-600: 124 58 237;
+        --primary-700: 109 40 217;
+        --primary-800: 91 33 182;
+        --primary-900: 76 29 149;
+        --primary-950: 46 16 101;
+      }
+
       body {
         font-family: 'Inter', sans-serif;
         -webkit-font-smoothing: antialiased;
