--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-[#f8f9fa] text-slate-900 dark:bg-slate-950 dark:text-slate-100 transition-colors duration-300 selection:bg-primary-500 selection:text-white">
     <div id="root"></div>
